--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
+    "react-transition-group": "^1.2.1",
     "recompose": "^0.26.0"
   },
   "scripts": {
